Update README.md
Updated gameplay features and progress tracking.